<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/product_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        tools:text="Product Name" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number"
        tools:text="Price" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stock_decrement_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            tools:text="-" />

        <EditText
            android:id="@+id/stock_quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qty"
            android:inputType="number"
            tools:text="Stock Quantity" />

        <Button
            android:id="@+id/stock_increment_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            tools:text="+" />

    </LinearLayout>

    <EditText
        android:id="@+id/supplier_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name"
        tools:text="Supplier Name" />

    <EditText
        android:id="@+id/supplier_phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_phone_number"
        tools:text="Supplier Phone Number"
        android:inputType="number"/>

    <Button
        android:id="@+id/contact_supplier_edit_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Phone Supplier"/>
</LinearLayout>